--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 python -m pip install --upgrade pip
-python -m pip install aiogram==2.25.1 apscheduler==3.10.1 requests==2.31.0 beautifulsoup4==4.12.2 matplotlib==3.8.2
+python -m pip install aiogram apscheduler==3.10.1 requests==2.31.0 beautifulsoup4==4.12.2 matplotlib==3.8.2
